Fixed the alignment of the elements in the form

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
 
 .signUp form h1 {
   text-align: center;
-  margin-top: 5%;
+  margin-top: 3%;
   margin-bottom: 25px;
   font-weight: 700;
   color: black;
